--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,7 +51,33 @@ textarea {
 
 .tiptap {
   @apply bg-gray-100 text-gray-800 p-2 rounded;
+  
 }
+
+.tiptap h1 {
+  @apply text-2xl font-bold;
+}
+
+.tiptap h2 {
+  @apply text-xl font-bold;
+}
+
+.tiptap h3 {
+  @apply text-lg font-bold;
+}
+
+.tiptap h4 {
+  @apply text-base font-bold;
+}
+
+.tiptap h5 {
+  @apply text-sm font-bold;
+}
+
+.tiptap h6 {
+  @apply text-xs font-bold;
+}
+
 
 .proseMirror {
   @apply bg-gray-100 text-gray-800 p-2 rounded;
