--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,6 +44,9 @@ button {
   @apply bg-gray-700 text-white font-bold py-2 px-4 rounded m-1;
 }
 
+button:hover {
+  @apply bg-gray-800;
+}
 textarea {
   @apply bg-gray-300 text-gray-800 p-2 rounded;
 }
